--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pong Game JavaScript</title>
+    <link rel="icon" type="image/png" href="pong.png">
     <style>
         body{
             background-color: dimgray;
